--- a/create-dataset.ipynb
+++ b/create-dataset.ipynb
@@ -16,6 +16,16 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "Collecting gapminder\n",
+      "  Downloading gapminder-0.1-py3-none-any.whl.metadata (1.5 kB)\n",
+      "Requirement already satisfied: pandas in c:\\users\\manny\\appdata\\local\\programs\\python\\python311\\lib\\site-packages (from gapminder) (1.5.3)\n",
+      "Requirement already satisfied: python-dateutil>=2.8.1 in c:\\users\\manny\\appdata\\local\\programs\\python\\python311\\lib\\site-packages (from pandas->gapminder) (2.8.2)\n",
+      "Requirement already satisfied: pytz>=2020.1 in c:\\users\\manny\\appdata\\local\\programs\\python\\python311\\lib\\site-packages (from pandas->gapminder) (2022.7.1)\n",
+      "Requirement already satisfied: numpy>=1.21.0 in c:\\users\\manny\\appdata\\local\\programs\\python\\python311\\lib\\site-packages (from pandas->gapminder) (1.24.1)\n",
+      "Requirement already satisfied: six>=1.5 in c:\\users\\manny\\appdata\\local\\programs\\python\\python311\\lib\\site-packages (from python-dateutil>=2.8.1->pandas->gapminder) (1.16.0)\n",
+      "Downloading gapminder-0.1-py3-none-any.whl (32 kB)\n",
+      "Installing collected packages: gapminder\n",
+      "Successfully installed gapminder-0.1\n",
       "       country continent  year  life_expectancy  population_millions  \\\n",
       "0  Afghanistan      Asia  1952           28.801             8.425333   \n",
       "1  Afghanistan      Asia  1957           30.332             9.240934   \n",
@@ -30,6 +40,7 @@
    ],
    "source": [
     "# Import necessary libraries\n",
+    "!pip install gapminder\n",
     "import pandas as pd\n",
     "from gapminder import gapminder\n",
     "\n",
@@ -54,7 +65,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "base",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -68,7 +79,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.2"
+   "version": "3.11.1"
   }
  },
  "nbformat": 4,
